Fixed A tags. Pause timeout by window visibility

--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -55,3 +55,10 @@ mat-tooltip-component > .mat-tooltip {
     white-space: pre-line !important;
     max-width: 800px !important;
 }
+
+a {
+    color: darkturquoise !important;
+    &:visited {
+        color: fuchsia !important;
+    }
+}
